Code refactoring, translation and security added
