# src/main/java/com/portella/weatherblanket/filter/endpoints/LocationGetContract.java
@@ -1,0 +1,16 @@
+package com.portella.weatherblanket.filter.endpoints;
+
+import com.portella.weatherblanket.filter.EndpointContract;
+
+import java.util.Set;
+
+public class LocationGetContract {
+
+    public static final EndpointContract CONTRACT =
+            new EndpointContract(
+                    "/location",
+                    "GET",
+                    Set.of(),
+                    false
+            );
+}
